--- a/package.json
+++ b/package.json
@@ -4,21 +4,22 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.1",
+    "gh-pages": "^2.2.0",
+    "homepage": "https://jimmyb2508.github.io/Weather-Application2/",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-icons-weather": "^1.0.5",
     "react-scripts": "3.2.0"
-    "homepage": "https://jimmyb2508.github.io/Weather-Application2/",
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
